# KerckoffsDecryption

./: .gitignore  .pylintrc  Kerckhoffs Decryption Challenges.docx  README.md  autokey.py  autokey_freq_analysis.py  autokey_ngrams.py  part1.py  part1.txt  part2.py  part2_kinda_unciphered.txt  polyalpha.py  pyproject.toml  temp.py
.devcontainer/: Dockerfile  devcontainer.json
KerckoffsDecryption/: pyproject.toml
KerckoffsDecryption-main/: autokey_ngrams.py
KerckoffsDecryption-main/src/: part2test.py
KerckoffsDecryption/input/: part2.txt
KerckoffsDecryption/src/: basekeygen.py  part2.py
KerckoffsDecryption/src/helper/: crypto.py
input/: codewords.txt  part2.txt  part3.txt  temp.txt
src/: basekeygen.py  crypto.py  part1.py  part2.cpp  part2.py  part2test.py  temp.py  test.py  utils.py
src/helper/: crypto.py  utils.py
src/helper/polysub/: freq.py  kasiski.py  processing.py
